--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
        <input type="submit">
     </form>
     <footer>
-        <a href="mypage.html">About Me</a>
+        <a href="index.html">About Me</a>
         <a href="contact.html">Contact Me</a>
     </footer>
 </body>
