--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <hr>
 
     <footer>
-        <a href="mypage.html">About Me</a>
+        <a href="index.html">About Me</a>
         <a href="contact.html">Contact Me</a>
     </footer>
 
